# AI-DJ-System

./: .cache  .gitignore  README.md  authenticate.py  camera_capture.py  config.py  debug.py  main.py  pyproject.toml
backend/: spotify-integration.py
mcp_server/: server.py
services/: advanced_audio_analysis.py  audio_analysis.py  camera_capture.py  dj_decision_engine.py  feedback_tracker.py  party_state_analyzer.py  spotify-service.py  spotify_service.py  test_mic_levels_plot.py  video_service.py  vision_analysis.py
shared/: state_manager.py
