[project]
name = "ai-dj-system"
version = "0.1.0"
description = "AI DJ System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "config>=0.5.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.1",
    "services>=0.1.1",
    "spotipy>=2.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "services", "shared", "utils", "flask_app"]
